Flowmini/flowmini_v21_structural_bridge/examples/fail/bad_import_cycle.flow
import "../std/cycle_a.flow"

module bad_import_cycle

main {
    one : int(1)
    print one
}
